# strutil

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: cmake.yml
include/: strutil.h
src/: CMakeLists.txt  explode_free.c  strexplode.c  trim.c
test/: CMakeLists.txt  strexplode_test.c  strexplode_test.cpp  strexplode_test.h  test_runner.c  trim_test.c  trim_test.cpp  trim_test.h
